	  into filesystem
	fixed sf bug 1060555: fix for 64-bit systems (dairiki)
	fmvcmd: do not send trailing junk to the server
	print key=, seq= in fspd debugs with fixed width for easy reading
	added BUGS and HISTORY sections to fspscan.1 manual page
	Lamerpack: disable most of command line options in fspd and print
	  simpler help message.

version 2.8.1b21 - 1 Nov 2004
	check for errors while copying files in fspd.
	removed all the PROTOX macros junk. Tools for analyzing C source
	  code works with fsp codebase now as result.
	added rename command
	add fmvcmd client for renaming files
	reorder some checks in configure.ac
	added one testcase to the path test suite
	client library did not sended any passwords to server
	util_abs_path now appends \npassword to full path
	server do not send correctly \0 terminated directory readmes
	PROTOCOL: Added information about optionally large sized packets,
	  transport and information about FSP project URL.
	PROTOCOL: checked/repaired by ispell :)
	PROTOCOL: added more details about packet checksuming.
	Lamerpack: removed port 21 from list of recommended ports.
	Lamerpack: avoid easy detection by lamers by disabling ver command
	do not print password to stdout in fcdcmd
	PROTOCOL: Add note to clients writers that two replies from server
	  can contain extra data even if server is not able to handle extra
	  data packets on input.
	FreeBSD needs /usr/local/lib in LDFLAGS to make Electric Fence
	  correctly detected by autotools
	PROTOCOL: define 5th bit in version flags - support for xtra data
	  on input
	server.c: send accept xtra data flag set
	fver: print difference between max. supported payload and
	  preffered payload size
	when directory has no readme, do not send any regular data block
	  at all. Previous versions sends one null byte
	printpro.c - print readme only if nonzero sized

version 2.8.1b20 - 26 Oct 2004
	Added pidfile.[c|h] from FreeBSD and modified it to fit in (hoaxter)