@@ -8,6 +8,8 @@
 	added BUGS and HISTORY sections to fspscan.1 manual page
 	Lamerpack: disable most of command line options in fspd and print
 	  simpler help message.
+	server_install: zero length filename cancels upload in progress
+	  this change is needed for upcoming fsplib.
 
 version 2.8.1b21 - 1 Nov 2004
 	check for errors while copying files in fspd.
